--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div> 
-      TEST PAGE FOR NEW GITHUB PAGES SITE
+      TEST PAGE FOR NEW GITHUB PAGES SITE by Gianluigi
     </div>
 </body>
 </html>
