--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <meta name="keywords" content="MD - Responsive Personal Resume / Portfolio template"/>
 <meta name="author" content="Metrothenes" />
 
-<title>MD - Responsive Personal Resume / Portfolio template</title>
+<title>Gianluigi Liguori Resume / Portfolio</title>
 <!--Fav and touch icons-->
 <link rel="shortcut icon" href="img/icons/favicon.ico">
 <link rel="apple-touch-icon" href="img/icons/apple-touch-icon.png">
