--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 							<div class="container">
 								<div class="col-md-12">
 									<div class="logo">
-										<img src="img/logo.png" class="img-responsive" alt="logo">
+										<img src="img/me450.jpg" class="img-responsive" alt="logo">
 									</div>
 									<!-- end .logo -->
 									<div class="info">
