--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 					<meta name="viewport" content="width=device-width, initial-scale=1.0">
 					<meta name="description" content="Gianluigi Liguori Resume / Portfolio" />
 					<meta name="keywords" content="Gianluigi Liguori Resume / Portfolio" />
-					<meta name="author" content="Metrothenes" />
+					<meta name="author" content="Gianluigi Liguori" />
 					<title>Gianluigi Liguori Resume / Portfolio</title>
 					<!--Fav and touch icons-->
 					<link rel="shortcut icon" href="img/icons/favicon.ico">
