--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
 											<div class="iconspace">
 												<i class="cicon fa-coffee"></i>
 											</div>
-											<span class="sum">2412</span>Cups of Coffee</div>
+											<span class="sum">Enough</span>Cups of Coffee</div>
 										<!-- end .total-numbers -->
 									</div>
 									<!-- end .col-xs-6 .col-sm-6 .col-md-3 .single -->
@@ -444,7 +444,7 @@
 											<div class="iconspace">
 												<i class="cicon fa-briefcase"></i>
 											</div>
-											<span class="sum">550</span>Succesful Projects</div>
+											<span class="sum">A lot of</span>Succesful Projects</div>
 										<!-- end .total-numbers -->
 									</div>
 									<!-- end .col-xs-6 .col-sm-6 .col-md-3 .single -->
@@ -453,7 +453,7 @@
 											<div class="iconspace">
 												<i class="cicon fa-group"></i>
 											</div>
-											<span class="sum">212</span>Happy Clients</div>
+											<span class="sum">Many</span>Happy Clients</div>
 										<!-- end .total-numbers -->
 									</div>
 									<!-- end .col-xs-6 .col-sm-6 .col-md-3 .single -->
@@ -462,7 +462,7 @@
 											<div class="iconspace">
 												<i class="cicon fa-trophy"></i>
 											</div>
-											<span class="sum">0</span>Awards Won</div>
+											<span class="sum">Some</span>Awards Won</div>
 										<!-- end .total-numbers -->
 									</div>
 									<!-- end .col-xs-6 .col-sm-6 .col-md-3 .single -->
