--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
 									<span>Full stack web (and not only) developer, with solid back-end attitudes. I love clean and good code. I always care about
 										performances and software engineering. Versatile programmer.</span>
 								</p>
-								<p>I worked for small and big customers using different languages and technologies for Line of Business Application back-end
-									(VB.NET, C#, PHP, Java) and Web front-end (JavaScript, Html, CSS). I constantly follow and experiment modern web and mobile
-									trends to offer professional consulting.</p>
+								<p>
+									I worked for small and big customers using different languages and technologies for Line of Business Application and Web front-end. I constantly follow and experiment modern web and mobile trends to offer professional consulting. Project / team management abilities trough the most common software developement methodologies (Kanban, DevOps, Scrum).
+								</p>
 							</div>
 							<!-- end .section-title -->
 							<div class="row">
