--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 								<div class="timeline-post-content-holder">
 									<div class="timeline-post-icon"></div>
 									<div class="timeline-post-title">
-										<h4>SENIOR DEVELOPER</h4>
+										<h4>ANALYST AND SOFTWARE DEVELOPER</h4>
 									</div>
 									<div class="timeline-post-subtitle">
 										<p>
@@ -308,7 +308,7 @@
 										</p>
 									</div>
 									<div class="timeline-post-content">
-										<p>Analyst and Software developer<br>
+										<p>
 										 <b>-CUP SANITA’</b> <br>
 										 <b>Description:</b> Development of a web portal for the multi-center reservation
 											of health services in public and private. <br>
