Olikon hystory update

--- a/index.html
+++ b/index.html
@@ -309,25 +309,23 @@
 									</div>
 									<div class="timeline-post-content">
 										<p>
-										 <b>-CUP SANITA’</b> <br>
-										 <b>Description:</b> Development of a web portal for the multi-center reservation
-											of health services in public and private. <br>
-										 <b>Technologies:</b> ASP.NET Web Form, C#, SQL Embedded, HTML, CSS, SQL Server,
-											WebServices SOAP <br>
-										 <b>-OMEGA PLUS</b> <br>
-										 <b>Description:</b> Development of a software for the management of the Specialist Medical
-											Center. Development of the ASTM protocol (ISO/IEC8802) for interfacing with medical equipment for clinical analysis.
-											Implementation of a PACS (picture archiving and communication system) for the storage, transmission, display and
-											printing of digital diagnostic images in 3D and 4D using the DICOM standard. Complete management of a warehouse
-											(Revenue, Expenses, Lots, Stocks, Availability, etc.). <br>
-										 <b>Technologies:</b> Windows Form, Visual Basic.NET, SQL Embedded,
-											HTML, CSS, SQL Server, WebServices SOAP, Crystal Report <br>
-										 <b>-NOMOS</b><br>
-										 <b>Description:</b> Development of a software for the
-											complete management of the law office with the sharing of deadlines using mobile devices. <br>
-										 <b>Technologies:</b> Windows
-											Form, C#, SQL Embedded, Crystal Report, Sql Server, Windows Mobile, SQL Server CE -Development of various web
-											sites and other small projects.
+											<b>-CUP SANITA’</b> <br>
+											<b>Description:</b> Development of a web portal for the multi-center reservation of health services in public
+											and private. <br>
+											<b>Technologies:</b> ASP.NET Web Form, C#, SQL Embedded, HTML, CSS, SQL Server, WebServices SOAP <br>
+											<b>-OMEGA PLUS</b> <br>
+											<b>Description:</b> Development of a software for the management of the Specialist Medical Center. Development
+											of the ASTM protocol (ISO/IEC8802) for interfacing with medical equipment for clinical analysis. Implementation
+											of a PACS (picture archiving and communication system) for the storage, transmission, display and printing of
+											digital diagnostic images in 3D and 4D using the DICOM standard. Complete management of a warehouse (Revenue,
+											Expenses, Lots, Stocks, Availability, etc.). <br>
+											<b>Technologies:</b> Windows Form, Visual Basic.NET, SQL Embedded, HTML, CSS, SQL Server, WebServices SOAP, Crystal
+											Report <br>
+											<b>-NOMOS</b><br>
+											<b>Description:</b> Development of a software for the complete management of the law office with the sharing of
+											deadlines using mobile devices. <br>
+											<b>Technologies:</b> Windows Form, C#, SQL Embedded, Crystal Report, Sql Server, Windows Mobile, SQL Server CE
+											-Development of various web sites and other small projects.
 										</p>
 									</div>
 								</div>
@@ -341,7 +339,7 @@
 								<div class="timeline-post-content-holder">
 									<div class="timeline-post-icon"></div>
 									<div class="timeline-post-title">
-										<h4>SENIOR DEVELOPER</h4>
+										<h4>ANALYST AND SOFTWARE DEVELOPER / CTO / PROJECT MANAGER</h4>
 									</div>
 									<div class="timeline-post-subtitle">
 										<p>
@@ -350,12 +348,43 @@
 										</p>
 									</div>
 									<div class="timeline-post-content">
-										<p>Analyst and software developer
-											<br>- Development of a software for management and billing of water / gas / electricity consumption
-											<br>- Development of a software for acquiring water / gas / electricity counters data using tablet devices
-											<br>- Development of a software for retail with full accounting management (Transport Documents, Invoices, Credit
-											Notes, Debit Notes, Returns, coupons)
-											<br>- Development of various web sites and other smaller projects</p>
+										<p>
+											<b>- GERIWEB</b> <br>
+											<b>Description:</b> Development of a software for management and billing of water / gas / electricity consumption.
+											<br>
+											<b>Technologies:</b> ASP.NET Web Form, C#, EntityFramework, HTML, CSS, jQuery, SQL Server, WebServices SOAP <br>
+											<b> -GERIMOBILE</b> <br>
+											<b>Description:</b> Development of a software for acquiring water / gas / electricity counters data using tablet
+											devices. <br>
+											<b>Technologies:</b> Windows Mobile, C#, SQL Serve CE <br>
+											<b>-SUITE ANUTEL - ACCERTA TU / GEDAT</b> <br>
+											<b>Description:</b> Development of a software suite intended for municipality and used by over 700 institutions
+											throughout Italy for the reading of the databases provided by the revenue authorities to the intersection of information
+											and the search for taxpayers tax avoiders / evaders, cleaning up of management databases IMU / internal TARES
+											and for the verification of the collection was. <br>
+											<b>Technologies:</b> Windows Form, Visual Basic.NET, SQL Server, Access, Crystal Report, WebServices REST, Dapper
+											<br>
+											<b>-GECO</b><br>
+											<b>Description:</b> Development of a software for retail with full accounting management (Transport Documents,
+											Invoices, Credit Notes, Debit Notes, Returns, coupons). <br>
+											<b>Technologies:</b> Windows Form, C#, EntityFramework, SQL Server, Crystal Report <br>
+											<b>-MANAGEMENT SUMMER CENTER</b> <br>
+											<b>Description:</b> Development of a software suite for the management of the summer center which provided: registration,
+											payment processing, the attendance register children with the aid of a tablet also used for the digital signature
+											from the parents, the organization of transport, meals and cash management. <br>
+											<b>Technologies:</b> WPF/XAML, C#, EntityFramework, SQL Server, WebServices REST <br>
+											<b>-LO STORE DEL PARTY</b>
+											<b>Description:</b> Development of an e-commerce portal for product management, sales, PayPal payment, shipping
+											and billing of orders relating to products sold by the customer. <br>
+											<b>Technologies:</b> ASP.NET Web Form, Visual Basic.NET, EntityFramework, HTML, CSS, jQuery, SQL Server, WebServices
+											SOAP, Bootstrap <br>
+											<b>-TUTTO IN UNA FESTA</b> <br>
+											<b>Description:</b> Development of a portal for the complete management of a company of animation and for the
+											organization of party: bookin, animators and equipment management, financial return, customer satisfaction and
+											parties and entertainers payments. <br>
+											<b>Technologies:</b> ASP.NET Web Form, Visual Basic.NET, EntityFramework, HTML, CSS, jQuery, SQL Server, WebServices
+											SOAP
+										</p>
 									</div>
 								</div>
 								<!-- /.timeline-post-content-holder end -->
