Modifica titolo versione italiana

--- a/it/index.html
+++ b/it/index.html
@@ -19,7 +19,7 @@
 	<meta name="description" content="Gianluigi Liguori Resume / Portfolio" />
 	<meta name="keywords" content="Gianluigi Liguori Resume / Portfolio" />
 	<meta name="author" content="Gianluigi Liguori" />
-	<title>Gianluigi Liguori Resume / Portfolio</title>
+	<title>Gianluigi Liguori Curriculum / Portfolio</title>
 	<!--Fav and touch icons-->
 	<link rel="shortcut icon" href="img/icons/favicon.ico">
 	<link rel="apple-touch-icon" href="img/icons/apple-touch-icon.png">
