--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
 				<!-- end .col-xs-12 .col-sm-6 .col-md-3 .chart-padding -->
 				<div class="col-xs-12 col-sm-6 col-md-3 chart-padding">
 					<div class="chart" data-percent="75">
-						<p>75
+						<p>81
 							<sup>%</sup>
 						</p>
 					</div>
@@ -595,7 +595,7 @@
 				<!-- end .col-xs-12 .col-sm-6 .col-md-3 .chart-padding -->
 				<div class="col-xs-12 col-sm-6 col-md-3 chart-padding">
 					<div class="chart" data-percent="91">
-						<p>91
+						<p>95
 							<sup>%</sup>
 						</p>
 					</div>
@@ -606,25 +606,13 @@
 				</div>
 				<!-- end .col-xs-12 .col-sm-6 .col-md-3 .chart-padding -->
 				<div class="col-xs-12 col-sm-6 col-md-3 chart-padding">
-					<div class="chart" data-percent="69">
-						<p>69
+					<div class="chart" data-percent="90">
+						<p>95
 							<sup>%</sup>
 						</p>
 					</div>
 					<div class="skills-content">
-						<h3>JOOMLA</h3>
-					</div>
-					<!-- end .skils-content -->
-				</div>
-				<!-- end .col-xs-12 .col-sm-6 .col-md-3 .chart-padding -->
-				<div class="col-xs-12 col-sm-6 col-md-3 chart-padding">
-					<div class="chart" data-percent="55">
-						<p>55
-							<sup>%</sup>
-						</p>
-					</div>
-					<div class="skills-content">
-						<h3>PHOTOSHOP</h3>
+						<h3>VB.NET</h3>
 					</div>
 					<!-- end .skils-content -->
 				</div>
@@ -642,8 +630,20 @@
 				</div>
 				<!-- end .col-xs-12 .col-sm-6 .col-md-3 .chart-padding -->
 				<div class="col-xs-12 col-sm-6 col-md-3 chart-padding">
+					<div class="chart" data-percent="55">
+						<p>55
+							<sup>%</sup>
+						</p>
+					</div>
+					<div class="skills-content">
+						<h3>PHOTOSHOP</h3>
+					</div>
+					<!-- end .skils-content -->
+				</div>
+				<!-- end .col-xs-12 .col-sm-6 .col-md-3 .chart-padding -->
+				<div class="col-xs-12 col-sm-6 col-md-3 chart-padding">
 					<div class="chart" data-percent="60">
-						<p>60
+						<p>70
 							<sup>%</sup>
 						</p>
 					</div>
@@ -654,19 +654,20 @@
 				</div>
 				<!-- end .col-xs-12 .col-sm-6 .col-md-3 .chart-padding -->
 				<div class="col-xs-12 col-sm-6 col-md-3 chart-padding">
-					<div class="chart" data-percent="90">
-						<p>90
+					<div class="chart" data-percent="69">
+						<p>69
 							<sup>%</sup>
 						</p>
 					</div>
 					<div class="skills-content">
-						<h3>VB.NET</h3>
+						<h3>CMS</h3>
 					</div>
 					<!-- end .skils-content -->
 				</div>
 				<!-- end .col-xs-12 .col-sm-6 .col-md-3 .chart-padding -->
 			</div>
 			<!-- end .row -->
+			Listed skills are just a resume, for the complete list, and their usage, <a href="resume_gianluigi_liguori.pdf" target="_blank">DOWNLOAD the full RESUME</a>
 		</div>
 		<!-- end .container -->
 	</section>
