Started to work at EURIS Group Updating

--- a/it/index.html
+++ b/it/index.html
@@ -346,13 +346,12 @@
 										</p>
 									</div>
 								</div>
-								<!-- /.timeline-post-content-holder end -->
 							</div>
 							<div class="timeline-post">
 								<div class="timeline-post-content-holder">
 									<div class="timeline-post-icon"></div>
 									<div class="timeline-post-title">
-										<h4>	ANALISTA E SVILUPPATORE SOFTWARE</h4>
+										<h4> ANALISTA E SVILUPPATORE SOFTWARE</h4>
 									</div>
 									<div class="timeline-post-subtitle">
 										<p>
@@ -381,12 +380,28 @@
 										</p>
 									</div>
 								</div>
-								<!-- /.timeline-post-content-holder end -->
 							</div>
 						</div>
-						<!-- /.timeline-post-left end -->
 						<div class="col-md-6 timeline-post-right">
-							<!-- /.timeline-post end -->
+							<div class="timeline-post">
+								<div class="timeline-post-content-holder">
+									<div class="timeline-post-icon"></div>
+									<div class="timeline-post-title">
+										<h4>ANALISTA E SVILUPPATORE SOFTWARE</h4>
+									</div>
+									<div class="timeline-post-subtitle">
+										<p>
+											<span>Gruppo Euris s.p.a.</span>
+											<span class="timeline-duration">2016 - Attuale</span>
+										</p>
+									</div>
+									<div class="timeline-post-content">
+										<p>
+											<b>In aggiornamento...</b>
+										</p>
+									</div>
+								</div>
+							</div>
 							<div class="timeline-post">
 								<div class="timeline-post-content-holder">
 									<div class="timeline-post-icon"></div>
@@ -396,7 +411,7 @@
 									<div class="timeline-post-subtitle">
 										<p>
 											<span>Olikon</span>
-											<span class="timeline-duration">2008 - Attuale</span>
+											<span class="timeline-duration">2008 - 2016</span>
 										</p>
 									</div>
 									<div class="timeline-post-content">
@@ -410,9 +425,11 @@
 											<b>Descrizione:</b> Sviluppo di un software per palmari / tablet per la lettura dei contatori. <br>
 											<b>Tecnologie:</b> Windows Mobile, C#, SQL Serve CE <br><br>
 											<b>-SUITE ANUTEL - ACCERTA TU / GEDAT</b> <br>
-											<b>Descrizione:</b> Sviluppo di una suite software destinati ai comuni ed utilizzata da oltre <u>700 enti</u>											in tutta Italia per la lettura delle banche dati fornite ai comuni dall'Agenzia del territorio e Agenzia delle
-											entrate (SIATEL e SISTER) per l’incrocio delle informazioni e la ricerca di contribuenti elusori/evasori, per
-											la bonifica delle banche dati gestionali IMU/TARES interne e per la verifica dello stato della riscossione. <br>
+											<b>Descrizione:</b> Sviluppo di una suite software destinati ai comuni ed utilizzata da oltre
+											<u>700 enti</u> in tutta Italia per la lettura delle banche dati fornite ai comuni dall'Agenzia del territorio e
+											Agenzia delle entrate (SIATEL e SISTER) per l’incrocio delle informazioni e la ricerca di contribuenti elusori/evasori,
+											per la bonifica delle banche dati gestionali IMU/TARES interne e per la verifica dello stato della riscossione.
+											<br>
 											<b>Tecnologie:</b> Windows Form, Visual Basic.NET, SQL Server, Access, Crystal Report, WebServices REST, Dapper
 											<br><br>
 											<b>-GECO</b><br>
@@ -439,12 +456,8 @@
 										</p>
 									</div>
 								</div>
-								<!-- /.timeline-post-content-holder end -->
 							</div>
-							<!-- /.timeline-post end -->
 						</div>
-						<!-- /.timeline-post-right end -->
-						<!-- Experience Timeline end -->
 						<!-- Education Timeline -->
 						<div class="timeline-category edu-cagegory">
 							<a class="large bt-timeline">Educazione</a>
@@ -453,9 +466,7 @@
 									<i class="fa-book"></i>
 								</div>
 							</div>
-							<!-- /.timeline-category-icon end -->
 						</div>
-						<!-- /.timeline-category end -->
 						<div class="col-md-6 timeline-post-left">
 							<div class="timeline-post">
 								<div class="timeline-post-content-holder">
@@ -473,13 +484,9 @@
 										<p>I.T.I.S. Indirizzo Informatico</p>
 									</div>
 								</div>
-								<!-- /.timeline-post-content-holder end -->
 							</div>
-							<!-- /.timeline-post end -->
 						</div>
-						<!-- /.timeline-post-left end -->
 						<div class="col-md-6 timeline-post-right">
-							<!-- /.timeline-post end -->
 							<div class="timeline-post">
 								<div class="timeline-post-content-holder">
 									<div class="timeline-post-icon"></div>
@@ -496,16 +503,13 @@
 										<p>Corso di laurea in Scienze Informatiche</p>
 									</div>
 								</div>
-								<!-- /.timeline-post-content-holder end -->
 							</div>
-							<!-- /.timeline-post end -->
 						</div>
-						<!-- /.timeline-post-right end -->
 						<!-- Education Timeline -->
 						<div class="timeline-end-icon">
 							<span>
-												<i class="fa-bookmark"></i>
-											</span>
+								<i class="fa-bookmark"></i>
+							</span>
 						</div>
 					</div>
 					<!-- end .timeline -->
@@ -679,7 +683,8 @@
 				<!-- end .col-xs-12 .col-sm-6 .col-md-3 .chart-padding -->
 			</div>
 			<!-- end .row -->
-			Le competenze elencate rappresentano solo un riepilogo, per quelle complete, ed il loro utilizzo, esegui il <a href="curriculum_gianluigi_liguori.pdf" target="_blank">DOWNLOAD del CURRICULUM completo</a>
+			Le competenze elencate rappresentano solo un riepilogo, per quelle complete, ed il loro utilizzo, esegui il <a href="curriculum_gianluigi_liguori.pdf"
+				target="_blank">DOWNLOAD del CURRICULUM completo</a>
 		</div>
 		<!-- end .container -->
 	</section>
@@ -762,7 +767,8 @@
 					<h1>Io Amo Programmare</h1>
 					<a href="#contact" class="mt-button large hire-btn">Assumimi ora</a>
 					<div class="col-md-12">
-						<h1>"I computer sono incredibilmente veloci, accurati e stupidi; gli esseri umani sono incredibilmente lenti, inaccurati e brillant; insieme essi sono potenti oltre l'immaginazione'"</h1>
+						<h1>"I computer sono incredibilmente veloci, accurati e stupidi; gli esseri umani sono incredibilmente lenti, inaccurati
+							e brillant; insieme essi sono potenti oltre l'immaginazione'"</h1>
 						<p>-Albert Einstein</p>
 					</div>
 					<!-- end .col-md-12 -->
