--- a/index.html
+++ b/index.html
@@ -164,7 +164,8 @@
 				<p>
 					I worked for small and big customers using different languages and technologies for Line of Business Application and Web
 					front-end. I constantly follow and experiment modern web and mobile trends to offer professional consulting. Project
-					/ team management abilities trough the most common software developement methodologies (Kanban, DevOps, Scrum).
+					/ team management abilities trough the most common software developement methodologies and techniques (Kanban, DevOps,
+					Scrum, xP, TDD, CI).
 				</p>
 			</div>
 			<!-- end .section-title -->
@@ -319,19 +320,23 @@
 									<div class="timeline-post-content">
 										<p>
 											<b>-KEENBEER</b> <br>
-											<b>Description:</b> Portal for beer enthusiasts, has a rich catalog of international beers. Views for local and events and management of geolocation of beers found in a local to the current location (GPS) or the address that you type for the selection of the nearest filtered favorite beer. <br>
+											<b>Description:</b> Portal for beer enthusiasts, has a rich catalog of international beers. Views for local and
+											events and management of geolocation of beers found in a local to the current location (GPS) or the address that
+											you type for the selection of the nearest filtered favorite beer. <br>
 											<b>Technologies:</b> ASP.NET Web Form, C#, EntityFramework, SQL Server, HTML, CSS, jQuery, BootStrap, Auth0 <br>
 											<b>Url:</b> <a href="http://www.keenbeer.com" target="_blank">http://www.keenbeer.com</a><br><br>
 											<b>-RAW ORM</b> <br>
 											<b>Description:</b>Micro implementation of an ORM <br>
-											<b>Technologies:</b>Visual Basic  <br>
+											<b>Technologies:</b>Visual Basic <br>
 											<b>Url:</b> <a href="http://github.com/liguori/RawORM" target="_blank">http://github.com/liguori/RawORM</a><br><br>
 											<b>-EASY DATA FILE</b><br>
-											<b>Description:</b> Library for import / export of data in fixed-length files, delimited, Excel typed objects. <br>
+											<b>Description:</b> Library for import / export of data in fixed-length files, delimited, Excel typed objects.
+											<br>
 											<b>Technologies:</b> C#, Visual Basic <br>
 											<b>Url:</b> <a href="https://github.com/liguori/EasyDataFile" target="_blank">https://github.com/liguori/EasyDataFile</a><br><br>
 											<b>-CHESSBOARD PLUS</b><br>
-											<b>Description:</b> Implementation of the game of checkers, game mode against computer with artificial intelligence. <br>
+											<b>Description:</b> Implementation of the game of checkers, game mode against computer with artificial intelligence.
+											<br>
 											<b>Technologies:</b> Visual Basic.NET, Windows Form <br>
 											<b>Url:</b> <a href="http://github.com/liguori/ChessboardPlus" target="_blank">http://github.com/liguori/ChessboardPlus</a><br><br>
 											<b>-TETRIS</b><br>
@@ -341,7 +346,6 @@
 										</p>
 									</div>
 								</div>
-								<!-- /.timeline-post-content-holder end -->
 							</div>
 							<div class="timeline-post">
 								<div class="timeline-post-content-holder">
@@ -372,17 +376,32 @@
 											<b>-NOMOS</b><br>
 											<b>Description:</b> Development of a software for the complete management of the law office with the sharing of
 											deadlines using mobile devices. <br>
-											<b>Technologies:</b> Windows Form, C#, SQL Embedded, Crystal Report, Sql Server, Windows Mobile, SQL Server CE<br><br>
-											-Development of various web sites and other small projects.
+											<b>Technologies:</b> Windows Form, C#, SQL Embedded, Crystal Report, Sql Server, Windows Mobile, SQL Server CE<br><br>											-Development of various web sites and other small projects.
 										</p>
 									</div>
 								</div>
-								<!-- /.timeline-post-content-holder end -->
 							</div>
 						</div>
-						<!-- /.timeline-post-left end -->
 						<div class="col-md-6 timeline-post-right">
-							<!-- /.timeline-post end -->
+							<div class="timeline-post">
+								<div class="timeline-post-content-holder">
+									<div class="timeline-post-icon"></div>
+									<div class="timeline-post-title">
+										<h4>ANALYST AND SOFTWARE DEVELOPER</h4>
+									</div>
+									<div class="timeline-post-subtitle">
+										<p>
+											<span>Euris Group s.p.a.</span>
+											<span class="timeline-duration">2016 - Current</span>
+										</p>
+									</div>
+									<div class="timeline-post-content">
+										<p>
+											<b>In updating...</b>
+										</p>
+									</div>
+								</div>
+							</div>
 							<div class="timeline-post">
 								<div class="timeline-post-content-holder">
 									<div class="timeline-post-icon"></div>
@@ -392,7 +411,7 @@
 									<div class="timeline-post-subtitle">
 										<p>
 											<span>Olikon</span>
-											<span class="timeline-duration">2008 - Current</span>
+											<span class="timeline-duration">2008 - 2016</span>
 										</p>
 									</div>
 									<div class="timeline-post-content">
@@ -435,12 +454,8 @@
 										</p>
 									</div>
 								</div>
-								<!-- /.timeline-post-content-holder end -->
 							</div>
-							<!-- /.timeline-post end -->
 						</div>
-						<!-- /.timeline-post-right end -->
-						<!-- Experience Timeline end -->
 						<!-- Education Timeline -->
 						<div class="timeline-category edu-cagegory">
 							<a class="large bt-timeline">Education</a>
@@ -449,9 +464,7 @@
 									<i class="fa-book"></i>
 								</div>
 							</div>
-							<!-- /.timeline-category-icon end -->
 						</div>
-						<!-- /.timeline-category end -->
 						<div class="col-md-6 timeline-post-left">
 							<div class="timeline-post">
 								<div class="timeline-post-content-holder">
@@ -469,13 +482,9 @@
 										<p>Computer Science obtained in a Technical Institute.</p>
 									</div>
 								</div>
-								<!-- /.timeline-post-content-holder end -->
 							</div>
-							<!-- /.timeline-post end -->
 						</div>
-						<!-- /.timeline-post-left end -->
 						<div class="col-md-6 timeline-post-right">
-							<!-- /.timeline-post end -->
 							<div class="timeline-post">
 								<div class="timeline-post-content-holder">
 									<div class="timeline-post-icon"></div>
@@ -492,16 +501,12 @@
 										<p>Degree in Computer Science</p>
 									</div>
 								</div>
-								<!-- /.timeline-post-content-holder end -->
 							</div>
-							<!-- /.timeline-post end -->
 						</div>
-						<!-- /.timeline-post-right end -->
-						<!-- Education Timeline -->
 						<div class="timeline-end-icon">
 							<span>
-												<i class="fa-bookmark"></i>
-											</span>
+								<i class="fa-bookmark"></i>
+							</span>
 						</div>
 					</div>
 					<!-- end .timeline -->
@@ -758,8 +763,8 @@
 					<h1>I Love To Develop</h1>
 					<a href="#contact" class="mt-button large hire-btn">Hire Me Now</a>
 					<div class="col-md-12">
-						<h1>"Computers are incredibly fast, accurate and stupid; humans are incredibly slow, inaccurate and brilliant; together they
-											are powerful beyond imagination"</h1>
+						<h1>"Computers are incredibly fast, accurate and stupid; humans are incredibly slow, inaccurate and brilliant; together
+							they are powerful beyond imagination"</h1>
 						<p>-Albert Einstein</p>
 					</div>
 					<!-- end .col-md-12 -->
