--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
 								<div class="timeline-post-content-holder">
 									<div class="timeline-post-icon"></div>
 									<div class="timeline-post-title">
-										<h4>High School</h4>
+										<h4>High School Diploma</h4>
 									</div>
 									<div class="timeline-post-subtitle">
 										<p>
@@ -480,25 +480,6 @@
 									</div>
 									<div class="timeline-post-content">
 										<p>Computer Science obtained in a Technical Institute.</p>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6 timeline-post-right">
-							<div class="timeline-post">
-								<div class="timeline-post-content-holder">
-									<div class="timeline-post-icon"></div>
-									<div class="timeline-post-title">
-										<h4>University</h4>
-									</div>
-									<div class="timeline-post-subtitle">
-										<p>
-											<span>Parthenope</span>
-											<span class="timeline-duration">2008 - today</span>
-										</p>
-									</div>
-									<div class="timeline-post-content">
-										<p>Degree in Computer Science</p>
 									</div>
 								</div>
 							</div>
