Updates and improvements

--- a/index.html
+++ b/index.html
@@ -117,7 +117,9 @@
 						<img src="img/logo-2.png" alt="Logo">
 					</a>
 					<!-- Logo -->
+					<span class="navbar-language">
 					Lanuage: <a href="#">ENGLISH</a>&nbsp;|&nbsp;<a href="./it/index.html">ITALIANO</a>
+					</span>
 				</div>
 				<!-- End .navbar-header -->
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -514,7 +516,7 @@
 							<div class="iconspace">
 								<i class="cicon fa-coffee"></i>
 							</div>
-							Enough Cups of Coffee</div>
+							Cups of Coffee</div>
 						<!-- end .total-numbers -->
 					</div>
 					<!-- end .col-xs-6 .col-sm-6 .col-md-3 .single -->
@@ -523,7 +525,7 @@
 							<div class="iconspace">
 								<i class="cicon fa-briefcase"></i>
 							</div>
-							A lot of Succesful Projects</div>
+							Succesful Projects</div>
 						<!-- end .total-numbers -->
 					</div>
 					<!-- end .col-xs-6 .col-sm-6 .col-md-3 .single -->
@@ -532,7 +534,7 @@
 							<div class="iconspace">
 								<i class="cicon fa-group"></i>
 							</div>
-							Many Happy Clients</div>
+							Happy Customers</div>
 						<!-- end .total-numbers -->
 					</div>
 					<!-- end .col-xs-6 .col-sm-6 .col-md-3 .single -->
@@ -541,7 +543,7 @@
 							<div class="iconspace">
 								<i class="cicon fa-trophy"></i>
 							</div>
-							Some Awards Won</div>
+							Awards Won</div>
 						<!-- end .total-numbers -->
 					</div>
 					<!-- end .col-xs-6 .col-sm-6 .col-md-3 .single -->
@@ -565,7 +567,7 @@
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-3 chart-padding">
 					<div class="chart" data-percent="87">
-						<p>87
+						<p>90
 							<sup>%</sup>
 						</p>
 					</div>
@@ -577,7 +579,7 @@
 				<!-- end .col-xs-12 .col-sm-6 .col-md-3 .chart-padding -->
 				<div class="col-xs-12 col-sm-6 col-md-3 chart-padding">
 					<div class="chart" data-percent="75">
-						<p>81
+						<p>90
 							<sup>%</sup>
 						</p>
 					</div>
@@ -661,7 +663,7 @@
 				<!-- end .col-xs-12 .col-sm-6 .col-md-3 .chart-padding -->
 			</div>
 			<!-- end .row -->
-			Listed skills are just a resume, for the complete list, and their usage, <a href="resume_gianluigi_liguori.pdf" target="_blank">DOWNLOAD the full RESUME</a>
+			Listed skills are just a resume of how much I use them everyday, for details <a href="resume_gianluigi_liguori.pdf" target="_blank">DOWNLOAD the full RESUME</a>
 		</div>
 		<!-- end .container -->
 	</section>
