--- a/it/index.html
+++ b/it/index.html
@@ -116,7 +116,9 @@
 						<img src="img/logo-2.png" alt="Logo">
 					</a>
 					<!-- Logo -->
+					<span class="navbar-language">
 					Lingua: <a href="../index.html">ENGLISH</a>&nbsp;|&nbsp;<a href="#">ITALIANO</a>
+					</span>
 				</div>
 				<!-- End .navbar-header -->
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -472,7 +474,7 @@
 								<div class="timeline-post-content-holder">
 									<div class="timeline-post-icon"></div>
 									<div class="timeline-post-title">
-										<h4>Superiori</h4>
+										<h4>Diploma di Scuola Superiore</h4>
 									</div>
 									<div class="timeline-post-subtitle">
 										<p>
@@ -517,7 +519,7 @@
 							<div class="iconspace">
 								<i class="cicon fa-coffee"></i>
 							</div>
-							Molte tazze di caffè accumulate</div>
+							Tazze di caffè accumulate</div>
 						<!-- end .total-numbers -->
 					</div>
 					<!-- end .col-xs-6 .col-sm-6 .col-md-3 .single -->
@@ -526,7 +528,7 @@
 							<div class="iconspace">
 								<i class="cicon fa-briefcase"></i>
 							</div>
-							Un sacco di progetti di successo</div>
+							Progetti di successo</div>
 						<!-- end .total-numbers -->
 					</div>
 					<!-- end .col-xs-6 .col-sm-6 .col-md-3 .single -->
@@ -535,7 +537,7 @@
 							<div class="iconspace">
 								<i class="cicon fa-group"></i>
 							</div>
-							Molti clienti felici</div>
+							Clienti felici</div>
 						<!-- end .total-numbers -->
 					</div>
 					<!-- end .col-xs-6 .col-sm-6 .col-md-3 .single -->
@@ -544,7 +546,7 @@
 							<div class="iconspace">
 								<i class="cicon fa-trophy"></i>
 							</div>
-							Alcuni riconoscimenti ottenuti</div>
+							Riconoscimenti ottenuti</div>
 						<!-- end .total-numbers -->
 					</div>
 					<!-- end .col-xs-6 .col-sm-6 .col-md-3 .single -->
@@ -568,7 +570,7 @@
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-3 chart-padding">
 					<div class="chart" data-percent="87">
-						<p>87
+						<p>90
 							<sup>%</sup>
 						</p>
 					</div>
@@ -580,7 +582,7 @@
 				<!-- end .col-xs-12 .col-sm-6 .col-md-3 .chart-padding -->
 				<div class="col-xs-12 col-sm-6 col-md-3 chart-padding">
 					<div class="chart" data-percent="75">
-						<p>81
+						<p>90
 							<sup>%</sup>
 						</p>
 					</div>
@@ -664,7 +666,7 @@
 				<!-- end .col-xs-12 .col-sm-6 .col-md-3 .chart-padding -->
 			</div>
 			<!-- end .row -->
-			Le competenze elencate rappresentano solo un riepilogo, per quelle complete, ed il loro utilizzo, esegui il <a href="curriculum_gianluigi_liguori.pdf"
+			Le competenze elencate rappresentano solo un riepilogo di quanto le utilizzo nel quotidiano, per un dettaglio esegui il <a href="curriculum_gianluigi_liguori.pdf"
 				target="_blank">DOWNLOAD del CURRICULUM completo</a>
 		</div>
 		<!-- end .container -->
