Fixed language selector size

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 					</a>
 					<!-- Logo -->
 					<span class="navbar-language">
-					Lanuage: <a href="#">ENGLISH</a>&nbsp;|&nbsp;<a href="./it/index.html">ITALIANO</a>
+					Language: <a href="#">ENGLISH</a>&nbsp;|&nbsp;<a href="./it/index.html">ITALIANO</a>
 					</span>
 				</div>
 				<!-- End .navbar-header -->
