Italian language in html

--- a/it/index.html
+++ b/it/index.html
@@ -10,7 +10,7 @@
 			<![endif]-->
 <!--[if (gte IE 9)|!(IE)]>
 				<!-->
-<html class="not-ie" lang="en">
+<html class="not-ie" lang="it">
 <!--<![endif]-->
 
 <head>
