--- a/it/index.html
+++ b/it/index.html
@@ -50,12 +50,14 @@
 	<link rel="stylesheet" href="css/colors/color-orange.css" title="orange">
 	<link rel="stylesheet" href="css/colors/color-emerald.css" title="emerald">
 	<script>
-	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-	  ga('create', 'UA-76059622-2', 'auto');
-	  ga('send', 'pageview');
+		(function (i, s, o, g, r, a, m) {
+			i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+				(i[r].q = i[r].q || []).push(arguments)
+			}, i[r].l = 1 * new Date(); a = s.createElement(o),
+				m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+		})(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+		ga('create', 'UA-76059622-2', 'auto');
+		ga('send', 'pageview');
 	</script>
 </head>
 
@@ -399,7 +401,18 @@
 									</div>
 									<div class="timeline-post-content">
 										<p>
-											<b>In aggiornamento...</b>
+											<b>-SISTEMA INFORMAZIONI CREDITIZIE </b> <br>
+											<b>Descrizione:</b> Sviluppo di un sistema di informazioni creditizie (SIC): un archivio informatico che contiene
+											i dati sui finanziamenti richiesti ed erogati a privati e imprese da parte di banche e società finanziarie.
+											<b>Tecnologie:</b> C#, SQL Server, ASP.NET Web Forms, Windows Forms<br><br>
+											<b>-SISTEMA DI SMISTAMENTO</b> <br>
+											<b>Descrizione:</b> Sviluppo di un servizio per lo scambio digitale del DDT e dei documenti di ritorno che permette
+											agli attori del processo logistico di accedere ad una piattaforma condivisa di documentazione degli scambi commerciali.<br>
+											<b>Tecnologie:</b> C#, SQL Server, EntityFramework, WebServices SOAP<br><br>
+											<b>-SISTEMA POSTA </b> <br>
+											<b>Descrizione:</b> Sviluppo di un software per l’invio di corrispondenza aziendale e la gestione completa del
+											tracciamento.<br>
+											<b>Tecnologie:</b> C#, SQL Server, EntityFramework, ASP.NET Web API, Swagger
 										</p>
 									</div>
 								</div>
@@ -666,8 +679,8 @@
 				<!-- end .col-xs-12 .col-sm-6 .col-md-3 .chart-padding -->
 			</div>
 			<!-- end .row -->
-			Le competenze elencate rappresentano solo un riepilogo di quanto le utilizzo nel quotidiano, per un dettaglio esegui il <a href="curriculum_gianluigi_liguori.pdf"
-				target="_blank">DOWNLOAD del CURRICULUM completo</a>
+			Le competenze elencate rappresentano solo un riepilogo di quanto le utilizzo nel quotidiano, per un dettaglio esegui il
+			<a href="curriculum_gianluigi_liguori.pdf" target="_blank">DOWNLOAD del CURRICULUM completo</a>
 		</div>
 		<!-- end .container -->
 	</section>
