--- a/index.html
+++ b/index.html
@@ -50,12 +50,14 @@
 	<link rel="stylesheet" href="css/colors/color-orange.css" title="orange">
 	<link rel="stylesheet" href="css/colors/color-emerald.css" title="emerald">
 	<script>
-	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-	  ga('create', 'UA-76059622-2', 'auto');
-	  ga('send', 'pageview');
+		(function (i, s, o, g, r, a, m) {
+		i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+			(i[r].q = i[r].q || []).push(arguments)
+		}, i[r].l = 1 * new Date(); a = s.createElement(o),
+			m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+		})(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+		ga('create', 'UA-76059622-2', 'auto');
+		ga('send', 'pageview');
 	</script>
 </head>
 
@@ -399,7 +401,17 @@
 									</div>
 									<div class="timeline-post-content">
 										<p>
-											<b>In updating...</b>
+											<b>-CREDIT INFORMATION SYSTEM </b> <br>
+											<b>Description:</b> Development of a credit information system (CIS: an archive that contains data on loans requested
+											and granted to individuals and businesses by banks and financial companies.
+											<b>Technologies:</b> C#, SQL Server, ASP.NET Web Forms, Windows Forms<br><br>
+											<b>-DELIVERING SYSTEM </b> <br>
+											<b>Description:</b> Development of a service for the digital exchange of transport documents and return documents
+											that allows players in the logistics process to access a shared platform for documentation of trade.<br>
+											<b>Technologies:</b> C#, SQL Server, EntityFramework, WebServices SOAP<br><br>
+											<b>-MAIL SYSTEM </b> <br>
+											<b>Description:</b> Development of software for delivering of business mails and full management of the mail tracking.<br>
+											<b>Technologies:</b> C#, SQL Server, EntityFramework, ASP.NET Web API, Swagger
 										</p>
 									</div>
 								</div>
