--- a/it/index.html
+++ b/it/index.html
@@ -403,7 +403,7 @@
 										<p>
 											<b>-SISTEMA INFORMAZIONI CREDITIZIE </b> <br>
 											<b>Descrizione:</b> Sviluppo di un sistema di informazioni creditizie (SIC): un archivio informatico che contiene
-											i dati sui finanziamenti richiesti ed erogati a privati e imprese da parte di banche e società finanziarie.
+											i dati sui finanziamenti richiesti ed erogati a privati e imprese da parte di banche e società finanziarie.<br>
 											<b>Tecnologie:</b> C#, SQL Server, ASP.NET Web Forms, Windows Forms<br><br>
 											<b>-SISTEMA DI SMISTAMENTO</b> <br>
 											<b>Descrizione:</b> Sviluppo di un servizio per lo scambio digitale del DDT e dei documenti di ritorno che permette
