--- a/it/index.html
+++ b/it/index.html
@@ -322,7 +322,7 @@
 									<div class="timeline-post-content">
 										<p>
 											<b>-KEENBEER</b> <br>
-											<b>Descrizione:</b> Portale per appassionati di birra, possiede un ricco catalogo internazionale di birre. Visualizzazione
+											<b>Descrizione:</b> Portale internazionale e multilingua per appassionati di birra, possiede un ricco catalogo di birre. Visualizzazione
 											locali ed eventi e gestione della geolocalizzazione delle birre presenti in un locale rispetto alla posizione
 											attuale (GPS) o all’indirizzo digitato dall’utente per la scelta della birra preferita filtrata più vicina.. <br>
 											<b>Tecnologie:</b> ASP.NET Web Form, C#, EntityFramework, SQL Server, HTML, CSS, jQuery, BootStrap, Auth0 <br>
