--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
 									<div class="timeline-post-content">
 										<p>
 											<b>-KEENBEER</b> <br>
-											<b>Description:</b> Portal for beer enthusiasts, has a rich catalog of international beers. Views for local and
+											<b>Description:</b> International and multilanguage portal for beer enthusiasts, has a rich catalog of beers. Views for local and
 											events and management of geolocation of beers found in a local to the current location (GPS) or the address that
 											you type for the selection of the nearest filtered favorite beer. <br>
 											<b>Technologies:</b> ASP.NET Web Form, C#, EntityFramework, SQL Server, HTML, CSS, jQuery, BootStrap, Auth0 <br>
