--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 					</div>
 					<!-- end .logo -->
 					<div class="info">
-						<h2>GIANLUIGI FETISH PIEDINI</h2>
+						<h2>GIANLUIGI THE BEST</h2>
 						<h3>SOFTWARE DEVELOPER</h3>
 						Lanuage: <a href="#">ENGLISH</a>&nbsp;|&nbsp;<a href="./it/index.html">ITALIANO</a>
 					</div>
