Removed explicit content

--- a/index.html
+++ b/index.html
@@ -246,20 +246,6 @@
 										<span>Coffee</span>
 									</p>
 								</li>
-								<li>
-									<p>
-										<i class="fa-truck"></i>
-										<br>
-										<span>Cars</span>
-									</p>
-								</li>
-								<li>
-									<p>
-										<i class="fa-money"></i>
-										<br>
-										<span>Money</span>
-									</p>
-								</li>
 							</ul>
 						</div>
 						<!-- end .about-extra-icon -->
@@ -726,7 +712,7 @@
 					</div>
 					<!-- end .col-xs-6 .col-sm-4 .col-md-2 -->
 					<h1>I Love To Develop</h1>
-					<a href="#contact" class="mt-button large hire-btn">Hire Me Now</a>
+					<a href="#contact" class="mt-button large hire-btn">Contact Me Now</a>
 					<div class="col-md-12">
 						<h1>"Computers are incredibly fast, accurate and stupid; humans are incredibly slow, inaccurate and brilliant; together
 							they are powerful beyond imagination"</h1>
