--- a/it/index.html
+++ b/it/index.html
@@ -245,20 +245,6 @@
 										<span>Caffè</span>
 									</p>
 								</li>
-								<li>
-									<p>
-										<i class="fa-truck"></i>
-										<br>
-										<span>Auto</span>
-									</p>
-								</li>
-								<li>
-									<p>
-										<i class="fa-money"></i>
-										<br>
-										<span>Soldi</span>
-									</p>
-								</li>
 							</ul>
 						</div>
 						<!-- end .about-extra-icon -->
@@ -726,7 +712,7 @@
 					</div>
 					<!-- end .col-xs-6 .col-sm-4 .col-md-2 -->
 					<h1>Io Amo Programmare</h1>
-					<a href="#contact" class="mt-button large hire-btn">Assumimi ora</a>
+					<a href="#contact" class="mt-button large hire-btn">Contattami ora</a>
 					<div class="col-md-12">
 						<h1>"I computer sono incredibilmente veloci, accurati e stupidi; gli esseri umani sono incredibilmente lenti, inaccurati
 							e brillant; insieme essi sono potenti oltre l'immaginazione'"</h1>
