--- a/it/index.html
+++ b/it/index.html
@@ -699,7 +699,7 @@
 					SQL
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-3 chart-padding">
-					PHOTOSHOP
+					AZURE
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-3 chart-padding">
 					PHP
