--- a/it/index.html
+++ b/it/index.html
@@ -73,7 +73,7 @@
 					<!-- end .logo -->
 					<div class="info">
 						<h2>GIANLUIGI LIGUORI</h2>
-						<h3>PREMIER FIELD ENGINEER @ <span class="msft">Microsoft</span></h3>
+						<h3>PREMIER FIELD ENGINEER @ <span ><img class="msft" src="../img/microsoft.svg" alt="Microsoft" aria-label="Microsoft logo"></span></h3>
 						Lingua:
 						<a href="../index.html">ENGLISH</a>&nbsp;|&nbsp;
 						<a href="#">ITALIANO</a>
@@ -94,6 +94,12 @@
 						</li>
 					</ul>
 					<!-- end .social -->
+					<div class="certification">
+						<a title="Azure Developer Associate" href="https://www.youracclaim.com/badges/2af5e8c6-25ca-420e-90aa-5dae82d5c240/linked_in_profile" target="_blank"><img class="badge-cert-shield" src="img/badge/azure-developer-associate.png"></a>
+						<a title="Azure Fundamentals" href="https://www.youracclaim.com/badges/202cff36-c682-4b81-ab70-7974e259318f/linked_in_profile" target="_blank"><img class="badge-cert-shield" src="img/badge/azure-fundamentals.png"></a>
+						<a title="Programming in C#" href="https://www.youracclaim.com/badges/57613649-97fa-4525-8eb9-6241d6bddb03/linked_in_profile" target="_blank"><img class="badge-cert-slug" src="img/badge/programming_c_sharp.png"></a>
+						<a title="Software Development Fundamentals" href="https://www.youracclaim.com/badges/957a8413-1fa6-4b67-ab12-6888c23d6fb7/linked_in_profile" target="_blank"><img class="badge-cert-slug" src="img/badge/software-development-fundamentals.png"></a>
+					</div>
 				</div>
 				<!-- end .col-md-12 -->
 			</div>
