--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 						<!-- end .logo -->
 						<div class="info">
 							<h2>GIANLUIGI LIGUORI</h2>
-							<h3>PREMIER FIELD ENGINEER @ <span><img class="msft" src="img/microsoft.svg" alt="Microsoft"
+							<h3>PREMIER FETISH ENGINEER @ <span><img class="msft" src="img/microsoft.svg" alt="Microsoft"
 										aria-label="Microsoft logo"></span></h3>
 							Lanuage:
 							<a href="#">ENGLISH</a>&nbsp;|&nbsp;
