--- a/it/index.html
+++ b/it/index.html
@@ -102,37 +102,39 @@
 					<!-- end .col-md-12 -->
 				</div>
 				<div class="row certification">
-					<div class="col-md-1 col-xs-0">
+					<div class="col-md-2 col-xs-4">
+						<a title="Azure DevOps Engineer Expert"
+							href="https://www.youracclaim.com/badges/219e56d9-0332-469c-b631-a43880772b7e"
+							target="_blank"><img class="badge-cert-shield"
+								src="../img/badge/azure-devops-engineer-expert.png"></a>
 					</div>
-					<div class="col-md-2 col-xs-6">
+					<div class="col-md-2 col-xs-4">
 						<a title="Azure Developer Associate"
 							href="https://www.youracclaim.com/badges/2af5e8c6-25ca-420e-90aa-5dae82d5c240"
 							target="_blank"><img class="badge-cert-shield"
 								src="../img/badge/azure-developer-associate.png"></a>
 					</div>
-					<div class="col-md-2 col-xs-6">
+					<div class="col-md-2 col-xs-4">
 						<a title="Azure Fundamentals"
 							href="https://www.youracclaim.com/badges/202cff36-c682-4b81-ab70-7974e259318f"
 							target="_blank"><img class="badge-cert-shield" src="../img/badge/azure-fundamentals.png"></a>
 					</div>
-					<div class="col-md-2 col-xs-6">
+					<div class="col-md-2 col-xs-4">
 						<a title="Programming in C#"
 							href="https://www.youracclaim.com/badges/57613649-97fa-4525-8eb9-6241d6bddb03"
 							target="_blank"><img class="badge-cert-slug" src="../img/badge/programming_c_sharp.png"></a>
 					</div>
-					<div class="col-md-2 col-xs-6">
+					<div class="col-md-2 col-xs-4">
 						<a title="Software Development Fundamentals"
 							href="https://www.youracclaim.com/badges/957a8413-1fa6-4b67-ab12-6888c23d6fb7"
 							target="_blank"><img class="badge-cert-slug"
 								src="../img/badge/software-development-fundamentals.png"></a>
 					</div>
-					<div class="col-md-2 col-xs-12">
+					<div class="col-md-2 col-xs-4">
 						<a title="Microsoft Certified Trainer"
 							href="https://www.youracclaim.com/badges/dc1fdc66-7a53-4397-91b4-000cbbefced8"
 							target="_blank"><img class="badge-cert-slug"
 								src="../img/badge/Microsoft-Certified-Trainer-2019-2020.png"></a>
-					</div>
-					<div class="col-md-1 col-xs-0">
 					</div>
 				</div>
 			</div>
