--- a/index.html
+++ b/index.html
@@ -210,10 +210,9 @@
 					I worked for small and big customers using different languages and technologies for Line of Business
 					Application and Web
 					front-end. I constantly follow and experiment modern web and mobile trends to offer professional
-					consulting. Project
-					/ team management abilities trough the most common software developement methodologies and
-					techniques (Kanban, DevOps,
-					Scrum, xP, TDD, CI).
+					consulting. Project / team management abilities, I develop software by pushing the most widespread
+					methodologies and techniques (Kanban, Agile, Scrum, xP, DevOps, TDD, CI/CD, IaC,
+					Microservices).
 				</p>
 			</div>
 			<!-- end .section-title -->
@@ -360,6 +359,17 @@
 									<br>
 									<b>Url:</b>
 									<a href="http://www.keenbeer.com" target="_blank">http://www.keenbeer.com</a>
+									<br>
+									<br>
+									<b>-ENGAGEMENT ORGANIZER</b>
+									<br>
+									<b>Description:</b>Engagement management tool
+									<br>
+									<b>Technologies:</b>Angular, ASP.NET Core, Electron, EF Core, SQL Lite, Angular Material
+									<br>
+									<b>Url:</b>
+									<a href="https://github.com/liguori/Engagement-Organizer"
+										target="_blank">https://github.com/liguori/Engagement-Organizer</a>
 									<br>
 									<br>
 									<b>-RAW ORM</b>
