--- a/it/index.html
+++ b/it/index.html
@@ -213,9 +213,9 @@
 					applicazioni business che per il
 					front-end web. Seguo costantemente e sperimento le nuove tendenze riguardanti web moderno e mobile
 					per offrire il più
-					professionale supporto possibile. Capacità di project / team management attraverso le più diffuse
-					metodologie di sviluppo
-					software (Kanban, DevOps, Scrum).
+					professionale supporto possibile. Capacità di project / team
+					management, sviluppo software spingendo le più diffuse metodologie e tecniche (Kanban,
+					Agile, Scrum, xP, TDD, DevOps, CI/CD, IaC, Microservizi).
 				</p>
 			</div>
 			<!-- end .section-title -->
@@ -363,6 +363,17 @@
 									<br>
 									<b>Url:</b>
 									<a href="http://www.keenbeer.com" target="_blank">http://www.keenbeer.com</a>
+									<br>
+									<br>
+									<b>-ENGAGEMENT ORGANIZER</b>
+									<br>
+									<b>Descrizione:</b>Tool con calendario per la gestione degli ingaggi
+									<br>
+									<b>Tecnologie:</b>Angular, ASP.NET Core, Electron, EF Core, SQL Lite, Angular Material
+									<br>
+									<b>Url:</b>
+									<a href="https://github.com/liguori/Engagement-Organizer"
+										target="_blank">https://github.com/liguori/Engagement-Organizer</a>
 									<br>
 									<br>
 									<b>-RAW ORM</b>
